--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -22,12 +22,12 @@
                 <span class="menu-icon">
                     <i class="mdi mdi-factory"></i>
                 </span>
-                <span class="menu-title">Manufacture</span>
+                <span class="menu-title">Manufacturer</span>
             </a>
         </li>
 
         <li class="nav-item menu-items">
-            <a class="nav-link" href="/product">
+            <a class="nav-link" href="/products">
                 <span class="menu-icon">
                     <i class="mdi mdi-cube-outline"></i>
                 </span>
