--- a/views/accounts.hbs
+++ b/views/accounts.hbs
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <div class="form-inline">
                 <input type="text" class="form-control w-75 border-light text-white" placeholder="Search accounts"
-                    name="username" value="{{username}}">
+                    name="search" value="{{search}}">
                 <button type="submit" class="btn btn-outline-light ml-2">Search</button>
             </div>
         </div>
