--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -53,6 +53,15 @@
             </a>
         </li>
 
+        <li class="nav-item menu-items">
+            <a class="nav-link" href="/orders">
+                <span class="menu-icon">
+                    <i class="mdi mdi-cart"></i>
+                </span>
+                <span class="menu-title">Orders</span>
+            </a>
+        </li>
+
         {{!-- <li class="nav-item menu-items">
             <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                 <span class="menu-icon">
