--- a/views/products.hbs
+++ b/views/products.hbs
@@ -48,9 +48,9 @@
 
     <div class="row mt-4">
         <div class="col-md-12 text-right">
-            <button class="btn btn-success">
+            <a href="/products/add" class="btn btn-success">
                 <i class="mdi mdi-plus" style="vertical-align: middle;"></i> Add New Product
-            </button>
+            </a>
         </div>
     </div>
 
