--- a/views/product-details.hbs
+++ b/views/product-details.hbs
@@ -32,24 +32,24 @@
         </div> --}}
 
         <div class="form-group">
-    <label>Related Images</label>
-    <div class="row text-center">
-        {{#each relatedImages}}
-        <div class="col-3">
-            <div class="image-container" style="position: relative;">
-                <!-- Hiển thị ảnh -->
-                <img src="{{imagepath}}" alt="Related Image" class="img-fluid"
-                    style="max-width: 100%; height: auto; margin: 10px 0;" />
-                <!-- Checkbox -->
-                <label class="custom-checkbox">
-                    <input type="checkbox" name="deletedImages" value="{{imageid}}" class="form-check-input">
-                    <span class="checkmark"></span>
-                </label>
+            <label>Related Images</label>
+            <div class="row text-center">
+                {{#each relatedImages}}
+                <div class="col-3">
+                    <div class="image-container" style="position: relative;">
+                        <!-- Hiển thị ảnh -->
+                        <img src="{{imagepath}}" alt="Related Image" class="img-fluid"
+                            style="max-width: 100%; height: auto; margin: 10px 0;" />
+                        <!-- Checkbox -->
+                        <label class="custom-checkbox">
+                            <input type="checkbox" name="deletedImages" value="{{imageid}}" class="form-check-input">
+                            <span class="checkmark"></span>
+                        </label>
+                    </div>
+                </div>
+                {{/each}}
             </div>
         </div>
-        {{/each}}
-    </div>
-</div>
 
         <div class="form-group">
             <label for="relatedImages">Upload Related Images</label>
@@ -121,54 +121,54 @@
         color: white !important;
     }
 
-/* Ẩn checkbox gốc */
-.custom-checkbox input {
-    display: none;
-}
+    /* Ẩn checkbox gốc */
+    .custom-checkbox input {
+        display: none;
+    }
 
-/* Tạo checkbox tùy chỉnh */
-.custom-checkbox .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-     transform: translate(-50%, 0);
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 4px;
-    cursor: pointer;
-}
+    /* Tạo checkbox tùy chỉnh */
+    .custom-checkbox .checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, 0);
+        height: 25px;
+        width: 25px;
+        background-color: #eee;
+        border-radius: 4px;
+        cursor: pointer;
+    }
 
-/* Khi hover trên checkbox */
-.custom-checkbox:hover .checkmark {
-    background-color: #ccc;
-}
+    /* Khi hover trên checkbox */
+    .custom-checkbox:hover .checkmark {
+        background-color: #ccc;
+    }
 
-/* Khi checkbox được chọn, hiển thị dấu "X" màu đỏ */
-.custom-checkbox input:checked ~ .checkmark {
-    background-color: red;
-}
+    /* Khi checkbox được chọn, hiển thị dấu "X" màu đỏ */
+    .custom-checkbox input:checked~.checkmark {
+        background-color: red;
+    }
 
-/* Tạo dấu "X" khi checkbox được chọn */
-.custom-checkbox .checkmark:after {
-    content: "❌"; /* Biểu tượng dấu X */
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-5%, 0);
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    line-height: 25px;
-    font-size: 16px;
-    color: white;
-    display: none;
-}
+    /* Tạo dấu "X" khi checkbox được chọn */
+    .custom-checkbox .checkmark:after {
+        content: "❌";
+        /* Biểu tượng dấu X */
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translate(-5%, 0);
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        line-height: 25px;
+        font-size: 16px;
+        color: white;
+        display: none;
+    }
 
-/* Hiển thị dấu "X" khi checkbox được chọn */
-.custom-checkbox input:checked ~ .checkmark:after {
-    display: block;
-}
-
+    /* Hiển thị dấu "X" khi checkbox được chọn */
+    .custom-checkbox input:checked~.checkmark:after {
+        display: block;
+    }
 </style>
 {{/section}}
