--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -128,6 +128,19 @@
                         </div>
                     </a>
                     <div class="dropdown-divider"></div>
+
+                    <a class="dropdown-item preview-item" href="/user/password">
+                        <div class="preview-thumbnail">
+                            <div class="preview-icon bg-dark rounded-circle">
+                                <i class="mdi mdi-key-change text-warning"></i>
+                            </div>
+                        </div>
+                        <div class="preview-item-content">
+                            <p class="preview-subject mb-1">Change password</p>
+                        </div>
+                    </a>
+                    <div class="dropdown-divider"></div>
+
                     <a class="dropdown-item preview-item" href="/user/logout">
                         <div class="preview-thumbnail">
                             <div class="preview-icon bg-dark rounded-circle">
