manage category-manufacturers

--- a/views/add-product.hbs
+++ b/views/add-product.hbs
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-    <h1>Edit Product</h1>
+    <h1>Add Product</h1>
     <form method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Product Name</label>
