--- a/views/accounts.hbs
+++ b/views/accounts.hbs
@@ -39,8 +39,8 @@
                         <td>{{email}}</td>
                         <td>{{createdat}}</td>
                         <td class="text-center">
-                            <button class="btn btn-sm btn-outline-warning">
-                                <i class="mdi mdi-pencil" style="vertical-align: middle;"></i> Edit
+                            <button class="btn btn-sm btn-outline-warning view-account" data-id="{{userid}}">
+                                <i class="mdi mdi-eye" style="vertical-align: middle;"></i> View
                             </button>
                             <button class="btn btn-sm btn-outline-danger ban-unban-user" data-id="{{userid}}"
                                 data-banned="{{isban}}" data-username="{{username}}">
@@ -55,13 +55,13 @@
                             <nav aria-label="Page navigation example" class="mt-4">
                                 <ul class="pagination justify-content-center">
                                     <li class="page-item {{#unless prevPage}}disabled{{/unless}}">
-                                        <a class="page-link" href="?{{#if query}}{{query}}&{{/if}}page={{prevPage}}"
-                                            tabindex="-1" aria-disabled="true">Previous</a>
+                                        <a class="page-link" href="#" data-page="{{prevPage}}" tabindex="-1"
+                                            aria-disabled="true">Previous</a>
                                     </li>
                                     {{#if (lte totalPages 7)}}
                                     {{#for 1 totalPages}}
                                     <li class="page-item {{#if (eq this ../curPage)}}active{{/if}}"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{this}}">{{this}}
+                                            href="#" data-page="{{this}}">{{this}}
                                         </a></li>
                                     {{/for}}
                                     {{/if}}
@@ -70,55 +70,52 @@
                                     {{#if (lte curPage 4)}}
                                     {{#for 1 5}}
                                     <li class="page-item {{#if (eq this ../curPage)}}active{{/if}}"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{this}}">{{this}}
+                                            href="#" data-page="{{this}}">{{this}}
                                         </a></li>
                                     {{/for}}
                                     <li class="page-item disabled">
                                         <span class="page-link">...</span>
                                     </li>
-                                    <li class="page-item"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{totalPages}}">{{totalPages}}
+                                    <li class="page-item"><a class="page-link" href="#"
+                                            data-page="{{totalPages}}">{{totalPages}}
                                         </a></li>
                                     {{/if}}
 
                                     {{#if (gte curPage (subtract totalPages 3))}}
-                                    <li class="page-item"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page=1">1
+                                    <li class="page-item"><a class="page-link" href="#" data-page="1">1
                                         </a></li>
                                     <li class="page-item disabled">
                                         <span class="page-link">...</span>
                                     </li>
                                     {{#for (subtract totalPages 4) totalPages}}
                                     <li class="page-item {{#if (eq this ../curPage)}}active{{/if}}"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{this}}">{{this}}
+                                            href="#" data-page="{{this}}">{{this}}
                                         </a></li>
                                     {{/for}}
                                     {{/if}}
 
                                     {{#if (inRange curPage 5 (subtract totalPages 4))}}
-                                    <li class="page-item"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page=1">1
+                                    <li class="page-item"><a class="page-link" href="#" data-page="1">1
                                         </a></li>
                                     <li class="page-item disabled">
                                         <span class="page-link">...</span>
                                     </li>
                                     {{#for (subtract curPage 1) (add curPage 1)}}
                                     <li class="page-item {{#if (eq this ../curPage)}}active{{/if}}"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{this}}">{{this}}
+                                            href="#" data-page="{{this}}">{{this}}
                                         </a></li>
                                     {{/for}}
                                     <li class="page-item disabled">
                                         <span class="page-link">...</span>
                                     </li>
-                                    <li class="page-item"><a class="page-link"
-                                            href="?{{#if ../query}}{{../query}}&{{/if}}page={{totalPages}}">{{totalPages}}
+                                    <li class="page-item"><a class="page-link" href="#"
+                                            data-page="{{totalPages}}">{{totalPages}}
                                         </a></li>
                                     {{/if}}
 
                                     {{/if}}
                                     <li class="page-item {{#unless nextPage}}disabled{{/unless}}">
-                                        <a class="page-link"
-                                            href="?{{#if query}}{{query}}&{{/if}}page={{nextPage}}">Next</a>
+                                        <a class="page-link" href="#" data-page="{{nextPage}}">Next</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -148,6 +145,24 @@
                     <input type="hidden" id="banUnbanAction" name="action">
                     <button type="submit" id="banUnbanSubmit" class="btn btn-primary">Confirm</button>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for view account details -->
+<div class="modal fade" id="viewAccountModal" tabindex="-1" role="dialog" aria-labelledby="viewAccountModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="viewAccountModalLabel">Account Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="accountDetails">
+                <!-- Account details will be loaded here via AJAX -->
             </div>
         </div>
     </div>
